--- a/lib/package.json
+++ b/lib/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sass": "^2.0.0",
+    "jquery": "^3.2.1",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
     "matchdep": "^1.0.1",
