--- a/lib/package.json
+++ b/lib/package.json
@@ -9,6 +9,7 @@
   "author": "J. Biotti",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "browserify": "^14.3.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
