--- a/lib/package.json
+++ b/lib/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "lib",
-  "version": "1.0.0",
-  "description": "This is an example project",
-  "main": "../index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "J. Biotti",
-  "license": "ISC",
+  "name": "blog",
+  "version": "0.1.0",
   "devDependencies": {
     "bootstrap": "^3.3.7",
-    "browserify": "^14.3.0",
+    "bootstrap-slider": "^9.8.0",
+    "browserify": "^13.1.1",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
+    "grunt-contrib-handlebars": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^2.0.0",
-    "jquery": "^3.2.1",
+    "handlebars": "^4.0.10",
+    "hbsfy": "^2.7.0",
+    "jquery": "^3.1.1",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
     "matchdep": "^1.0.1",
     "sass": "^0.5.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-star-rating": "^4.0.2",
+    "firebase": "^4.0.0"
   }
 }
